Fixed overflows

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ Author URL: http://shapebootstrap.net
 /*************************
 *******Typography******
 **************************/
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   padding-top: 100px;
   background: #F7FAFD;
@@ -16,6 +21,7 @@ body {
   color: #64686d;
   line-height: 26px;
 }
+
 body.nl *[lang=en] {
   display: none;
 }
@@ -56,14 +62,6 @@ a:focus {
   text-decoration: none;
   color: #345e87;
 }
-.sponsor {
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 0px;
-  margin-bottom: 25px;
-  max-width:10em;
-  max-height:10em;
-}
 .smallSponsor {
   font-weight: 600;
   font-size: 16px;
@@ -103,7 +101,7 @@ hr {
   margin-bottom: 50px;
 }
 .section-header .section-title {
-  font-size: 44px;
+  font-size: 2.4em;
   color: #272727;
   text-transform: uppercase;
   position: relative;
@@ -295,16 +293,17 @@ ul.nostyle i {
 }
 #main-slider .slider-inner h2 {
   margin-top: 180px;
-  font-size: 72px;
+  font-size: 3em;
   line-height: 1;
   text-transform: uppercase;
   color: #fff;
   text-shadow: 4px 4px 8px #072333;
+  word-wrap: break-word;
 }
 #main-slider .slider-inner h3 {
   margin-top:0px;
   margin-bottom:45px;
-  font-size: 36px;
+  font-size: 2em;
   line-height: 1;
   text-transform: uppercase;
   color: #fff;
@@ -1069,7 +1068,6 @@ ul.nostyle i {
   width: 100%;
 }
 img.animatie {
-  margin: 25px;
   border: 10px solid;
   border-color: #4278AC;
 }
